# sanikey

./: .gitignore  .gitmessage  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  mkdocs.yml  package-lock.json  package.json  pyproject.toml
.agents/: .codex-config-managed-skills.json
.agents/skills/sanikey-usb-browser-audit/: SKILL.md
.agents/skills/sanikey-usb-browser-audit/agents/: openai.yaml
.githooks/: commit-msg  commit-msg.py  pre-commit  pre-push
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: CONTRIBUTING.md  architecture.md  cheatsheet.md  examples.md  first-usb-key.md  getting_started.md  index.md  limits-and-future-work.md  organizzare-archivio-sanitario.md  sanikey-detailed-spec.md  sanikey-high-level-spec.md  scripts.md  user-guide.md
docs/config-example/: README.md  accounts.toml
docs/decisions/: adr-advanced-offline-search.md  adr-consultation-artifact-visibility.md  adr-consultation-host-compatibility.md  adr-cornerstone3d-offline-spike.md  adr-dwv-offline-spike.md  adr-explicit-ingestion-patterns.md  adr-federated-clinical-search-ui.md  adr-frontend-consultation-ui.md  adr-italian-interface-language.md  adr-medication-leaflets.md  adr-observation-imports.md  adr-source-image-ocr-policy.md  adr-usb-consultation-hardening.md  adr-usb-uuid-global-default.md  decisioni-iniziali.md  index.md
docs/generated-example/: README.md
docs/generated-example/patient-a/: README.md
docs/patients-example/: README.md
docs/patients-example/patient-a/documents/laboratory/: 20260102 Referto Sintetico.txt  20260102 Synthetic Report.txt
docs/patients-example/patient-a/metadata/: clinical_summary.toml  document_tags.toml
docs/process/: dicom-treatment.md  end-to-end-real-data-verification.md  initial-implementation.md  metadata-toml-reference.md  stato-dei-test.md
docs/release/: checklist.md  process.md
immagini/: Sfondo 1 - grigioazzurro.avif
scripts/: bootstrap_dev_environment.py  build_all.py  build_database.py  build_patient.py  build_web.py  changelog_guard.sh  clean_repo.py  coverage_summary.py  deploy_usb.py  export_usb.py  extract_text.py  generate_cheatsheet.py  generate_clinical_summary.py  generate_embeddings.py  generate_timeline.py  install_repo_git_config.py  list_patients.py  new_decision.py  privacy_guard.py  process_dicom.py  pyproject_lint.py  release_audit.sh  replace_usb_logo.py  run_repo_tool.py  run_with_repo_python.sh  sanikey_command.py  scan_documents.py  tag_guard.sh  update_archive.py  validate_repo.py  validate_usb.py
src/sanikey/: __init__.py  __main__.py  build.py  cli.py  config.py  containers.py  database.py  dicom.py  documents.py  errors.py  exports.py  frontend.py  inspection.py  integrity.py  leaflet_tui.py  leaflets.py  markdown.py  metadata.py  models.py  observation_imports.py  privacy.py  progress.py  proposals.py  rendering.py  usb.py
tests/: test_build.py  test_cli.py  test_config.py  test_containers.py  test_database.py  test_dicom.py  test_documents.py  test_examples_acceptance.py  test_exports.py  test_frontend.py  test_inspection.py  test_integrity.py  test_leaflet_tui.py  test_leaflets.py  test_markdown.py  test_metadata.py  test_observation_imports.py  test_progress.py  test_proposals.py  test_rendering.py  test_replace_usb_logo_script.py  test_usb.py  test_validation.py  test_version.py
